# Local-MCP-Client

./: .env  README.md  client1.py  main.py  pyproject.toml  test_server.py
